--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -108,8 +108,9 @@ li {
  **********/
 .header,
 .header-container {
-  height: 100vh; /* 変数をサポートしていないブラウザのフォールバック */
+  height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
 }
 .header-container {
   position: relative;
