--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -117,7 +117,7 @@ li {
  * header
  **********/
 .header-container {
-  /**height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
 }
 .header-container {
