--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -114,9 +114,8 @@ li {
  * header
  **********/
 .header-container {
+  height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
-}
-.header-container {
   position: relative;
 }
 
