--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -15,7 +15,7 @@
   transition: visibility ease-in-out 1.6s, opacity ease-in-out 1.6s;
 }
 .circle {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0, 0);
