--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -115,6 +115,7 @@ li {
  * header
  **********/
 .header-container {
+  height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   position: relative;
 }
