--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -18,7 +18,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: scale(0, 0) translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0, 0);
   width: 32px;
   height: 32px;
   background: #FFF;
@@ -34,15 +34,15 @@
 @keyframes circle-animation {
   0% {
     opacity: 0;
-    transform: scale(0, 0) translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0, 0);
   }
   50% {
     opacity: 1;
-    transform: scale(1, 1) translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1, 1);
   }
   100% {
     opacity: 0;
-    transform: scale(0, 0) translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0, 0);
   }
 }
 
