--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -115,7 +115,7 @@ li {
  **********/
 .header-container {
   position: relative;
-  min-height: 100vh; /* Fallback */
+  /** min-height: 100vh; /* Fallback */
   min-height: calc(var(--vh, 1vh) * 100);
 }
 
