--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -114,9 +114,9 @@ li {
  * header
  **********/
 .header-container {
-  position: relative;
+  /** position: relative; */
   /** min-height: 100vh; /* Fallback */
-  min-height: calc(var(--vh, 1vh) * 100);
+  /** min-height: calc(var(--vh, 1vh) * 100); */
 }
 
 h1 {
