--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -114,7 +114,7 @@ li {
  * header
  **********/
 .header-container {
-  /** position: relative; */
+  position: relative; 
   /** min-height: 100vh; /* Fallback */
   /** min-height: calc(var(--vh, 1vh) * 100); */
 }
