--- a/study-of-webgl/styles/works.css
+++ b/study-of-webgl/styles/works.css
@@ -72,7 +72,7 @@ body {
 .what {
   text-align: left;
   position: fixed;
-  min-width: 40%;
+  min-width: 80%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -40%);
@@ -128,6 +128,9 @@ h4 {
   list-style-type: disc;
   list-style-position: inside;
   font-size: 1.2rem;
+}
+.what li:not(:last-of-type) {
+  padding-bottom: 8px;
 }
 .close {
   position: absolute;
