--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -3,10 +3,11 @@
  * loading
  **********/
 .loading {
-  background: #000;
   position: fixed;
-  top: 0;
-  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
   width: 100%;
   height: 100%;
   z-index: 9999;
@@ -15,10 +16,6 @@
   transition: visibility ease-in-out 1.6s, opacity ease-in-out 1.6s;
 }
 .circle {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0, 0);
   width: 32px;
   height: 32px;
   background: #FFF;
