--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -21,6 +21,7 @@
   background: #FFF;
   border-radius: 50%;
   opacity: 0;
+  transform: scale(0, 0);
   animation: circle-animation 1.6s ease-in-out 0s infinite normal running;
 }
 .loading.loaded {
@@ -30,12 +31,15 @@
 @keyframes circle-animation {
   0% {
     opacity: 0;
+    transform: scale(0, 0);
   }
   50% {
     opacity: 1;
+    transform: scale(1, 1);
   }
   100% {
     opacity: 0;
+    transform: scale(0, 0);
   }
 }
 
