--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -131,6 +131,24 @@ h1 {
   opacity: 1;
 }
 
+.count {
+  font-size: 2.4rem;
+  position: absolute;
+  bottom: 32px;
+  right: 0;
+  transform: translateX(100%);
+  opacity: 0;
+  transition: transform 0.4s 1.6s ease-in-out, opacity 0.4s 1.6s ease-in-out;
+}
+.count p {
+  font-size: 2.4rem;
+  padding-bottom: 0;
+}
+.loading.loaded + .body-container .count {
+  transform: none;
+  opacity: 1;
+}
+
 .description {
   white-space: nowrap;
   position: absolute;
@@ -194,40 +212,35 @@ ul li {
 }
 
 .scroll-down {
+  width: 24px;
+  height: 24px;
   font-size: 1.6rem;
   position: absolute;
+  border-right: 2px solid #FFF;
+  border-bottom: 2px solid #FFF;
   bottom: 32px;
-  right: 0;
-  transform: translateX(100%);
+  left: 50%;
+  transform: translateX(50%) rotate(0);
   opacity: 0;
-  transition: transform 0.4s 1.8s ease-in-out, opacity 0.4s 1.8s ease-in-out;
-  animation: scroll-down-animation 2.4s ease-in-out 3.8s infinite normal none running;
 }
 .loading.loaded + .body-container .scroll-down {
-  transform: translateX(0);
-  opacity: 1;
+  animation: scroll-down-animation 2.4s ease-in-out 3.8s infinite normal none running;
+  transform: translateX(50%) rotate(45deg);
+  opacity: 0;
 }
 
 @keyframes scroll-down-animation {
   0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  25% {
     opacity: 0;
-    transform: translateY(100%);
+    transform: translate(-50%, -100%) rotate(45deg);
   }
   50% {
-    opacity: 0;
-    transform: translateY(-100%);
-  }
-  75% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translate(-50%, 0) rotate(45deg);
   }
   100% {
-    opacity: 1;
-    transform: translateY(0);
+    opacity: 0;
+    transform: translate(-50%, 100%) rotate(45deg);
   }
 }
 
