--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -132,7 +132,6 @@ h1 {
 }
 
 .count {
-  font-size: 2.4rem;
   position: absolute;
   bottom: 32px;
   right: 0;
@@ -141,7 +140,7 @@ h1 {
   transition: transform 0.4s 1.8s ease-in-out, opacity 0.4s 1.8s ease-in-out;
 }
 .count p {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   padding-bottom: 0;
 }
 .loading.loaded + .body-container .count {
@@ -220,7 +219,7 @@ ul li {
   border-bottom: 2px solid #FFF;
   bottom: 32px;
   left: 50%;
-  transform: translateX(50%) rotate(0);
+  transform: translateX(50%) rotate(45deg);
   opacity: 0;
 }
 .loading.loaded + .body-container .scroll-down {
@@ -228,7 +227,6 @@ ul li {
   transform: translateX(50%) rotate(45deg);
   opacity: 0;
 }
-
 @keyframes scroll-down-animation {
   0% {
     opacity: 0;
@@ -253,15 +251,15 @@ ul li {
 
 .works {
   display: block;
-  opacity: 0;
-  transform: translateY(10%);
-  transition: transform 0.4s 0.2s ease-in-out, opacity 0.4s 0.2s ease-in-out;
 }
-.works.show {
-  transform: none;
-  opacity: 1;
+@media (min-width: 480px) and (max-width: 780px) {
+  .works {
+    display: inline-block;
+    width: 50%;
+    padding: 0 8px;
+  }
 }
-@media (min-width: 480px) {
+@media (min-width: 780px) {
   .works {
     display: inline-block;
     width: 33.3%;
@@ -311,23 +309,10 @@ ul li {
   width: 100%;
 }
 .title {
-  display: block;
   padding-bottom: 8px;
   font-size: 1.6rem;
-  opacity: 0;
-  transform: translateX(-10%);
-  transition: transform 0.2s 0.4s ease-in-out, opacity 0.2s 0.4s ease-in-out;
-}
-.works.show .title,
-.works.show .date {
-  opacity: 1;
-  transform: none;
 }
 .date {
-  display: block;
   padding-bottom: 16px;
   font-size: 1.2rem;
-  opacity: 0;
-  transform: translateX(10%);
-  transition: transform 0.2s 0.6s ease-in-out, opacity 0.2s 0.6s ease-in-out;
 }
