--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -272,6 +272,13 @@ ul li {
   position: relative;
   overflow: hidden;
 }
+.progressive {
+  filter: grayscale(100%);
+  transition: filter 0.4s 0.4s ease-in-out;
+}
+.progressive.show {
+  filter: none;
+}
 .overlay {
   background: rgba(0, 0, 0, 0.4);
   position: absolute;
