--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -272,7 +272,7 @@ ul li {
   position: relative;
   overflow: hidden;
 }
-.progressive {
+.progress {
   filter: grayscale(100%);
   transition: filter 0.4s 0.4s ease-in-out;
 }
