--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -276,7 +276,7 @@ ul li {
   filter: grayscale(100%);
   transition: filter 0.4s 0.4s ease-in-out;
 }
-.progressive.show {
+.progress.show {
   filter: none;
 }
 .overlay {
