--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -273,8 +273,8 @@ ul li {
   overflow: hidden;
 }
 .progress {
-  filter: grayscale(100%);
-  transition: filter 0.4s 0.4s ease-in-out;
+  filter: blur(2px);
+  transition: filter 0.4s 0.2s ease-in-out;
 }
 .progress.show {
   filter: none;
