--- a/study-of-webgl/styles/index.css
+++ b/study-of-webgl/styles/index.css
@@ -131,7 +131,7 @@ h1 {
   opacity: 1;
 }
 
-.count {
+.hi {
   position: absolute;
   bottom: 32px;
   right: 0;
@@ -139,11 +139,11 @@ h1 {
   opacity: 0;
   transition: transform 0.4s 1.8s ease-in-out, opacity 0.4s 1.8s ease-in-out;
 }
-.count p {
+.hi p {
   font-size: 1.6rem;
   padding-bottom: 0;
 }
-.loading.loaded + .body-container .count {
+.loading.loaded + .body-container .hi {
   transform: none;
   opacity: 1;
 }
