--- a/src/htmls/index.pug
+++ b/src/htmls/index.pug
@@ -10,7 +10,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
     meta(property="og:site_name", content="Toshiya Marukubo | Website")
     meta(property="og:url", content="https://toshiya-marukubo.github.io/")
     meta(property="og:title", content="Toshiya Marukubo | Website")
-    meta(property="og:image", content="https://toshiya-marukubo.github.io/og-home.png")
+    meta(property="og:image", content="https://toshiya-marukubo.github.io/dist/assets/images/og-home.png")
     meta(property="og:description", content="Toshiya Marukubo | Website")
     // Twitter Card
     meta(name="twitter:card", content="summary_large_image")
