change images path.

--- a/src/htmls/index.pug
+++ b/src/htmls/index.pug
@@ -73,5 +73,5 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
       // main
       footer
         p
-          small &amp;copy; Toshiya Marukubo
+          small @Toshiya Marukubo
     script(defer, src="./dist/js/index.bundle.js")
