--- a/src/htmls/study-of-webgl/index.pug
+++ b/src/htmls/study-of-webgl/index.pug
@@ -10,7 +10,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
     meta(property="og:site_name", content="Toshiya Marukubo | Study of WebGL")
     meta(property="og:url", content="https://toshiya-marukubo.github.io/study-of-webgl/")
     meta(property="og:title", content="Toshiya Marukubo | Study of WebGL")
-    meta(property="og:image", content="https://toshiya-marukubo.github.io/og-home.png")
+    meta(property="og:image", content="https://toshiya-marukubo.github.io/dist/assets/images/study-of-webgl/og-home.png")
     meta(property="og:description", content="Study of WebGL")
     // Twitter Card
     meta(name="twitter:card", content="summary_large_image")
@@ -81,7 +81,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
       footer
         .footer-container
           p
-            small &amp;copy; Toshiya Marukubo
+            small @Toshiya Marukubo
         // end footer-container
       // end footer
     // end body-container
