--- a/src/htmls/study-of-webgl/modules/head-not-included-variable.pug
+++ b/src/htmls/study-of-webgl/modules/head-not-included-variable.pug
@@ -5,7 +5,7 @@ meta(name="theme-color", content="#000000")
 // Open Graph Protocol
 meta(property="og:type", content="website")
 meta(property="og:site_name", content="Toshiya Marukubo | Study of WebGL")
-meta(property="og:image", content="https://toshiya-marukubo.github.io/og-home.png")
+meta(property="og:image", content="https://toshiya-marukubo.github.io/dist/assets/images/study-of-webgl/og-home.png")
 meta(property="og:description", content="Study of WebGL")
 // Twitter Card
 meta(name="twitter:card", content="summary_large_image")
