created menger sponge and builded.

--- a/src/htmls/study-of-webgl/works/erosion.pug
+++ b/src/htmls/study-of-webgl/works/erosion.pug
@@ -4,7 +4,7 @@
     lowercaseFileName: 'erosion',
     date: 'Feb 01, 2022',
     navs: {
-      pre: '137-5',
+      pre: 'menger',
       cur: '#017',
       next: 'tender'
     },
