--- a/src/styles/modules/loading.styl
+++ b/src/styles/modules/loading.styl
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  background: #fff;
+  background: #000;
   top: 0;
   left: 0;
   height: 100%;
@@ -21,7 +21,7 @@
 .circle
   opacity: 0;
   transform: scale(0, 0);
-  background: #000;
+  background: #FFF;
   width: 32px;
   height: 32px;
   border-radius: 50%;
