--- a/src/htmls/dailymotion/days/1.pug
+++ b/src/htmls/dailymotion/days/1.pug
@@ -10,6 +10,8 @@ html
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(href='../../dist/css/dailymotion-index.bundle.css' rel='stylesheet')
+    script.
+      console.log('(*^^)v');
     title #{infos.name}
   body
     include ../modules/loading.pug
