--- a/src/htmls/dailymotion/index.pug
+++ b/src/htmls/dailymotion/index.pug
@@ -10,12 +10,16 @@ html(lang="en")
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(href='../dist/css/dailymotion-index.bundle.css' rel='stylesheet')
+    script.
+      console.log('(*^^)v');
     title #{infos.name}
   body
     include ./modules/loading.pug
     .container
       .container-inner
         h1 #{infos.name}
+        p
+          a(href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days") Source Code
         ul
           - for (let i = infos.days; i > 0; i--)
             li
