--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -25,7 +25,8 @@ a
     font-size: 2.4rem;
     padding-bottom: 24px;
   p
-    font-size: 1rem;
+    font-size: 1.2rem;
+    padding-bottom: 24px;
   ul li
     font-size: 1.2rem;
     padding-bottom: 24px;
