--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -56,12 +56,10 @@ iframe
   height: 100%;
   visibility: hidden;
   opacity: 0;
-  transform: translateX(-10%);
-  transition: visibility 0.4s ease-in-out, opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+  transition: visibility 0.4s ease-in-out, opacity 0.4s ease-in-out;
   &.show
     visibility: visible;
     opacity: 1;
-    transform: none;
 
 .closeButton
   position: fixed;
