--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -56,7 +56,7 @@ iframe
   height: 100%;
   visibility: hidden;
   opacity: 0;
-  transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
   &.show
     visibility: visible;
     opacity: 1;
