--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -43,8 +43,10 @@ a
       left: 0;
       transform: translateY(-50%);
       transition: width 0.2s ease-in-out;
-    a:hover::before
-      width: 100%;
+    @media (hover: hover)
+      a:hover::before
+        width: 100%;
+  
 
 iframe
   background: #FFF;
