--- a/src/htmls/dailymotion/days/5.pug
+++ b/src/htmls/dailymotion/days/5.pug
@@ -7,13 +7,9 @@
 doctype html
 html
   head
-    meta(charset='utf-8')
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(href='../../dist/css/dailymotion-index.bundle.css' rel='stylesheet')
-    script.
-      console.log('(*^^)v');
+    include ../modules/head.pug
     title #{infos.name}
-  body
+  body.preload
     include ../modules/loading.pug
     .title
       p #{infos.name}
