--- a/src/htmls/dailymotion/index.pug
+++ b/src/htmls/dailymotion/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
     script.
       console.log('(*^^)v');
     title #{infos.name}
-  body.preload
+  body
     include ./modules/loading.pug
     .container
       .container-inner
