--- a/src/htmls/dailymotion/days/3.pug
+++ b/src/htmls/dailymotion/days/3.pug
@@ -9,7 +9,7 @@ html
   head
     include ../modules/head.pug
     title #{infos.name}
-  body.preload
+  body
     include ../modules/loading.pug
     .title
       p #{infos.name}
