--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -67,7 +67,7 @@ ul
     display: inline-block;
     a
       padding: 12px;
-      transition: color 0.4s ease-in-out;
+      transition: color 0.4s ease-in-out 0s;
     a:hover
       color: deeppink
 
