--- a/src/styles/modules/study-of-webgl-common.styl
+++ b/src/styles/modules/study-of-webgl-common.styl
@@ -20,7 +20,7 @@ a,
 a:visited
   color: #FFF;
   text-decoration: none;
-  transition: color 0.4s ease-in-out;
+  transition: color 0.4s ease-in-out 0s;
   display: block;
 
 a:hover                                                                                                                                                                         
@@ -50,7 +50,7 @@ h1
   left: 0;
   transform: translateX(-100%);
   opacity: 0;
-  transition: transform 0.4s 1.6s ease-in-out, opacity 0.4s 1.6s ease-in-out;
+  transition: transform 0.4s ease-in-out 1.6s, opacity 0.4s ease-in-out 1.6s;
 
 .loading.loaded + .body-container h1
   transform: none;
@@ -85,7 +85,7 @@ p
   border-bottom: 2px solid #FFF;
   transform: translateX(-100%);
   opacity: 0;
-  transition: transform 0.4s 1.8s ease-in-out, opacity 0.4s 1.8s ease-in-out;
+  transition: transform 0.4s ease-in-out 1.8s, opacity 0.4s ease-in-out 1.8s;
 
 .loading.loaded + .body-container .frame-bottom-left
   transform: none;
@@ -98,7 +98,7 @@ p
   border-top: 2px solid #FFF;
   transform: translateX(100%);
   opacity: 0;
-  transition: transform 0.4s 1.6s ease-in-out, opacity 0.4s 1.6s ease-in-out;
+  transition: transform 0.4s ease-in-out 1.6s, opacity 0.4s ease-in-out 1.6s;
 
 .loading.loaded + .body-container .frame-top-right
   transform: none;
