--- a/src/styles/modules/loading.styl
+++ b/src/styles/modules/loading.styl
@@ -25,6 +25,7 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
+  backface-visibility: hidden;
   animation: animation-circle 2.4s ease-in-out 0s infinite normal none running;
 
 @keyframes animation-circle
