--- a/src/styles/modules/loading.styl
+++ b/src/styles/modules/loading.styl
@@ -13,6 +13,7 @@
   z-index: 9999;
   visibility: visible;
   opacity: 1;
+  backface-visibility: hidden;
   transition: visibility 1.6s ease-in-out 0s, opacity 1.6s ease-in-out 0s;
   &.loaded
     visibility: hidden;
